tests/outref/TCT018.ref
# Run queries from TCT018.sql (expected to run without any errors). Cross check output of Octo against Postgres
# Run queries that are expected to error out. Cross check against reference file

-- TCT018 : OCTO636 : SIZE specified in the NUMERIC type of the typecast operator (::) should be honored

-- All below queries produce errors

-- Test of ERR_NUMERIC_SCALE
CREATE TABLE abcd(id NUMERIC(3,4));
SELECT 1.50::numeric(2,3);
SELECT -1.50::numeric(2,3);

-- Test of syntax error
CREATE TABLE abcd(id NUMERIC(3,-1));	-- negative scale is not allowed
SELECT 1.50::INTEGER(2,3);		-- scale parameter is not allowed for INTEGER
SELECT -1.50::INTEGER(2,3);		-- scale parameter is not allowed for INTEGER

-- Test of ERR_INVALID_INTEGER_SYNTAX
CREATE TABLE abcd(id NUMERIC(3,0.5));

-- Test of ERR_NUMERIC_OVERFLOW
SELECT 1495::NUMERIC(2);
SELECT -1495::NUMERIC(2);
SELECT 1.49::NUMERIC(0);
SELECT 15.54::NUMERIC(1);
SELECT 15.54::NUMERIC(0);
SELECT -1.49::NUMERIC(0);
SELECT -15.54::NUMERIC(1);
SELECT -15.54::NUMERIC(0);

[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 4 must be between zero(0) and precision 3
LINE 4:1: CREATE TABLE abcd(id NUMERIC(3,4));
                                      ^^^^^
OCTO> CREATE TABLE abcd(id NUMERIC(3,4));
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 3 must be between zero(0) and precision 2
LINE 5:1: SELECT 1.50::numeric(2,3);
                              ^^^^^
OCTO> SELECT 1.50::numeric(2,3);
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 3 must be between zero(0) and precision 2
LINE 6:1: SELECT -1.50::numeric(2,3);
                               ^^^^^
OCTO> SELECT -1.50::numeric(2,3);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected MINUS, expecting DATE or TIME or TIMESTAMP or LITERAL
LINE 8:1: CREATE TABLE abcd(id NUMERIC(3,-1));	-- negative scale is not a...
                                         ^
OCTO> CREATE TABLE abcd(id NUMERIC(3,-1));
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected COMMA, expecting RIGHT_PAREN
LINE 9:2: SELECT 1.50::INTEGER(2,3);		-- scale parameter is not allowed f...
                                ^
OCTO> -- negative scale is not allowed
SELECT 1.50::INTEGER(2,3);
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected COMMA, expecting RIGHT_PAREN
LINE 10:2: SELECT -1.50::INTEGER(2,3);		-- scale parameter is not allowed ...
                                  ^
OCTO> -- scale parameter is not allowed for INTEGER
SELECT -1.50::INTEGER(2,3);
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '0.5'
LINE 12:3: CREATE TABLE abcd(id NUMERIC(3,0.5));
                                          ^^^
OCTO> -- scale parameter is not allowed for INTEGER

CREATE TABLE abcd(id NUMERIC(3,0.5));
OCTO> SELECT 1495::NUMERIC(2);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 2, scale 0 must round to an absolute value less than 10^2
OCTO> SELECT -1495::NUMERIC(2);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 2, scale 0 must round to an absolute value less than 10^2
OCTO> SELECT 1.49::NUMERIC(0);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
OCTO> SELECT 15.54::NUMERIC(1);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 1, scale 0 must round to an absolute value less than 10^1
OCTO> SELECT 15.54::NUMERIC(0);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
OCTO> SELECT -1.49::NUMERIC(0);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
OCTO> SELECT -15.54::NUMERIC(1);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 1, scale 0 must round to an absolute value less than 10^1
OCTO> SELECT -15.54::NUMERIC(0);
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
OCTO> 
